// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props={} renders correctly 1`] = `
<ForwardRef(WithStyles)>
  
  <form
    onSubmit={[Function]}
  >
    <ForwardRef(WithStyles)
      gutterBottom={true}
      variant="h5"
    >
      Load Story
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      InputLabelProps={
        Object {
          "shrink": true,
        }
      }
      autoFocus={true}
      error={false}
      fullWidth={true}
      helperText=""
      label="URL"
      margin="normal"
      name="url"
      onChange={[Function]}
      placeholder="http://localhost/demo.yaml"
      required={true}
      spellCheck={false}
      type="url"
      value=""
    />
    <br />
    <br />
    <ForwardRef(WithStyles)
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Load
    </ForwardRef(WithStyles)>
  </form>
</ForwardRef(WithStyles)>
`;

exports[`when state.message="foo" renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    autoHideDuration={6000}
    message="foo"
    onClose={[Function]}
    open={true}
  />
  <form
    onSubmit={[Function]}
  >
    <ForwardRef(WithStyles)
      gutterBottom={true}
      variant="h5"
    >
      Load Story
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      InputLabelProps={
        Object {
          "shrink": true,
        }
      }
      autoFocus={true}
      error={false}
      fullWidth={true}
      helperText=""
      label="URL"
      margin="normal"
      name="url"
      onChange={[Function]}
      placeholder="http://localhost/demo.yaml"
      required={true}
      spellCheck={false}
      type="url"
      value=""
    />
    <br />
    <br />
    <ForwardRef(WithStyles)
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Load
    </ForwardRef(WithStyles)>
  </form>
</ForwardRef(WithStyles)>
`;
